# clipslot

./: .gitignore  package-lock.json  package.json
.github/workflows/: build.yml
clipslot-server/: .env.example  Cargo.toml  Dockerfile  api.http  docker-compose.yml  railway.toml
clipslot-server/src/: config.rs  main.rs
clipslot-server/src/db/: mod.rs
clipslot-server/src/db/migrations/: 20250101000000_initial_schema.sql
clipslot-server/src/middleware/: auth.rs
clipslot-server/src/models/: device.rs  mod.rs  sync.rs  user.rs
clipslot-server/src/routes/: auth.rs  key_exchange.rs  mod.rs  sync.rs  ws.rs
docs/: ROADMAP.md  phase-00-project-setup.md  phase-01-clipboard-monitoring.md  phase-02-local-storage.md  phase-03-permanent-slots.md  phase-04-slot-pasting.md  phase-05-tray-ui.md  phase-06-encryption.md  phase-07-backend-sync-service.md  phase-08-cross-device-sync.md  phase-09-app-exclusion.md  phase-10-polish-packaging.md  project_documentation.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  logging.rs  main.rs
src-tauri/src/clipboard/: item.rs  mod.rs  monitor.rs
src-tauri/src/crypto/: cipher.rs  keychain.rs  mod.rs
src-tauri/src/slots/: manager.rs  mod.rs
src-tauri/src/storage/: database.rs  mod.rs
src-tauri/src/sync/: api_client.rs  history_sync.rs  key_exchange.rs  manager.rs  mod.rs  offline_queue.rs  slot_sync.rs  types.rs  ws_client.rs
src/components/Settings/: AccountTab.tsx  GeneralTab.tsx  PrivacyTab.tsx  SettingsWindow.tsx  SlotsTab.tsx  settings.css
