[package]
name = "clipslot"
version = "0.2.8"
description = "Your clipboard, everywhere. With memory."
authors = ["you"]
edition = "2021"

[lib]
name = "clipslot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
hostname = "0.4"
device_query = "2"
aes-gcm = "0.10"
rand = "0.8"
keyring = "3"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
